--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
-@import "/styles/header.css";
-@import "/styles/intro.css";
-@import "/styles/about.css";
-@import "/styles/projects.css";
-@import "/styles/services.css";
-@import "/styles/gallery.css";
-@import "/styles/contacts.css";
-@import "/styles/footer.css";
-@import "/styles/reviews.css";
+@import "styles/header.css";
+@import "styles/intro.css";
+@import "styles/about.css";
+@import "styles/projects.css";
+@import "styles/services.css";
+@import "styles/gallery.css";
+@import "styles/contacts.css";
+@import "styles/footer.css";
+@import "styles/reviews.css";
 
 html {
   scroll-behavior: smooth;
