--- a/main.css
+++ b/main.css
@@ -24,6 +24,12 @@ body {
   margin: 0 auto;
   box-sizing: border-box;
 }
+h2,
+h3,
+h4 {
+  font-size: 18px;
+  line-height: 25px;
+}
 
 @media (max-width: 1199px) {
   .container {
