--- a/styles/about.css
+++ b/styles/about.css
@@ -5,15 +5,13 @@
 }
 
 h2 {
-  font-size: 18px;
-  line-height: 22px;
-  color: #121212;
   letter-spacing: -0.01em;
-  padding-bottom: 31px;
-  text-align: left;
+  padding-top: 150px;
+  padding-bottom: 30px;
 }
+
 .about_title {
-  width: 100%;
+  max-width: 1048px;
   font-size: 45px;
   line-height: 61px;
   color: #121212;
@@ -21,10 +19,11 @@ h2 {
   padding-left: 3px;
 }
 .about_btn {
+  font-family: inherit;
   margin-top: 30px;
   display: inline-block;
   padding: 20px 40px;
-  font-size: 20px;
+  font-size: 21px;
   line-height: 27px;
   border-radius: 5px;
   background-color: #ad1818;
@@ -35,6 +34,9 @@ h2 {
 }
 
 @media (max-width: 1199px) {
+  h2 {
+    padding-top: 120px;
+  }
   .about_title {
     font-size: 35px;
     line-height: 48px;
@@ -43,6 +45,7 @@ h2 {
 
 @media (max-width: 767px) {
   h2 {
+    padding-top: 80px;
     padding-bottom: 20px;
   }
   .about_title {
