--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,7 +1,6 @@
 .intro {
   margin: 0 auto;
   box-sizing: border-box;
-  padding-bottom: 151px;
 }
 
 h1 {
@@ -11,12 +10,12 @@ h1 {
   color: #121212;
   letter-spacing: -0.03em;
   padding-top: 5px;
+  padding-bottom: 30px;
 }
 
 .intro_image {
   max-width: 100%;
   position: relative;
-  margin-top: 31px;
   height: 500px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -40,19 +39,14 @@ h1 {
   letter-spacing: -0.03em;
 }
 @media (max-width: 1199px) {
-  .intro {
-    padding-bottom: 120px;
-  }
   h1 {
-    width: 802px;
+    max-width: 802px;
     font-size: 50px;
     line-height: 60px;
   }
   .intro_image {
     width: 100%;
     height: 400px;
-
-    bottom: 30px;
     background-size: cover;
     background-position: center;
   }
@@ -63,12 +57,9 @@ h1 {
   }
 }
 @media (max-width: 767px) {
-  .intro {
-    padding-bottom: 80px;
-  }
   h1 {
-    width: 348px;
-    font-size: 30px;
+    max-width: 348px;
+    font-size: 31px;
     line-height: 32px;
   }
   .intro_image {
