--- a/styles/projects.css
+++ b/styles/projects.css
@@ -2,15 +2,11 @@
   margin: 0 auto;
   box-sizing: border-box;
   background: #ffffff;
-  padding-top: 151px;
 }
-
 h3 {
-  font-size: 18px;
-  line-height: 25px;
-  color: #121212;
-  letter-spacing: -0.03em;
-  padding-bottom: 28px;
+  letter-spacing: -0.01em;
+  padding-top: 150px;
+  padding-bottom: 30px;
 }
 
 .project_item {
@@ -41,6 +37,7 @@ h3 {
   padding-bottom: 150px;
 }
 .project_btn {
+  font-family: inherit;
   display: block;
   border: 1px solid #ad1818;
   border-radius: 5px;
@@ -60,14 +57,11 @@ h3 {
   cursor: pointer;
 }
 @media (max-width: 1199px) {
-  .projects {
-    padding-top: 120px;
-  }
   .project_item {
     width: 100%;
     padding-bottom: 80px;
   }
-  .project_item:nth-last-child() {
+  .project_item:nth-child(4) {
     padding-bottom: 102px;
   }
   .project_img {
@@ -85,10 +79,8 @@ h3 {
 }
 
 @media (max-width: 767px) {
-  .projects {
-    padding-top: 80px;
-  }
   h3 {
+    padding-top: 80px;
     padding-bottom: 20px;
   }
   .project_item {
@@ -119,5 +111,11 @@ h3 {
   .project_wrapper {
     width: 100%;
     padding-bottom: 144px;
+  }
+  .project_btn {
+    font-size: 22px;
+    line-height: 30px;
+    padding-top: 37px;
+    padding-bottom: 37px;
   }
 }
