--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,28 +1,142 @@
-.gallery_wrapper {
-  height: 718px;
-  background: linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 0) 0.52%,
-      rgba(0, 0, 0, 0.4) 82.81%
-    ),
-    url(image.png);
-  background-image: url(/resources/two_room_apartments.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50%;
+.gallery__wrapper {
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .gallery {
-  margin: 0 auto;
-  width: 1400px;
+  position: relative;
+  width: 100%;
+  height: 717px;
 }
 
-.bedroom {
-  width: 443px;
-  font-size: 30px;
-  line-height: 40px;
+.gallery__tittle {
+  position: absolute;
+  top: 67px;
+  z-index: 10;
+  font-size: 22px;
+  line-height: 30px;
   letter-spacing: -0.033em;
   color: #ffffff;
-  padding-top: 577px;
-  padding-left: 126px;
+  text-transform: uppercase;
+}
+
+.gallery__slides {
+  width: 100%;
+  height: 100%;
+}
+.gallery__slide {
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.gallery__slide_active {
+  opacity: 1;
+}
+
+.gallery__image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.gallery__text {
+  position: absolute;
+  width: 450px;
+  font-size: 30px;
+  line-height: 41px;
+  letter-spacing: -0.03em;
+  color: #ffffff;
+  bottom: 60px;
+}
+
+.gallery__controls-wrapper {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  bottom: 162px;
+  height: 40px;
+  row-gap: 14px;
+}
+
+.gallery__control-prev,
+.gallery__control-next {
+  background: none;
+  border: none;
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+}
+
+.gallery__control-prev {
+  background-image: url(/resources/controller_prev.png);
+}
+
+.gallery__control-next {
+  background-image: url(/resources/controller_next.png);
+}
+
+.gallery__control-prev:hover,
+.gallery__control-next:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+@media (max-width: 1199px) {
+  .gallery {
+    height: 536px;
+  }
+  .gallery__tittle {
+    top: 80px;
+    left: 50px;
+    font-size: 20px;
+    line-height: 27px;
+  }
+  .gallery__text {
+    width: 377px;
+    font-size: 25px;
+    line-height: 34px;
+    left: 50px;
+    bottom: 80px;
+  }
+  .gallery__controls-wrapper {
+    bottom: 155px;
+    left: 34px;
+    row-gap: 34px;
+  }
+}
+@media (max-width: 767px) {
+  .gallery {
+    height: 408px;
+  }
+  .gallery__tittle {
+    top: 60px;
+    left: 12px;
+    font-size: 14px;
+    line-height: 19px;
+  }
+  .gallery__text {
+    width: 287px;
+    font-size: 19px;
+    line-height: 26px;
+    left: 13px;
+    bottom: 60px;
+  }
+  .gallery__controls-wrapper {
+    bottom: 191px;
+    left: -3px;
+    justify-content: space-between;
+  }
+  .gallery__control-prev,
+  .gallery__control-next {
+    width: 25px;
+    height: 25px;
+  }
+  .gallery__control-prev {
+    background-image: url(/resources/controller_prev_mob.png);
+  }
+
+  .gallery__control-next {
+    background-image: url(/resources/controller_next_mob.png);
+  }
 }
