--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -69,11 +69,11 @@
 }
 
 .gallery__control-prev {
-  background-image: url(resources/controller_prev.png);
+  background-image: url(..resources/gallery/controller_prev.png);
 }
 
 .gallery__control-next {
-  background-image: url(resources/controller_next.png);
+  background-image: url(..resources/gallery/controller_next.png);
 }
 
 .gallery__control-prev:hover,
@@ -133,10 +133,10 @@
     height: 25px;
   }
   .gallery__control-prev {
-    background-image: url(resources/controller_prev_mob.png);
+    background-image: url(..resources/gallery/controller_prev_mob.png);
   }
 
   .gallery__control-next {
-    background-image: url(resources/controller_next_mob.png);
+    background-image: url(..resources/gallery/controller_next_mob.png);
   }
 }
