--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -25,6 +25,7 @@
   height: 100%;
 }
 .gallery__slide {
+  display: none;
   position: absolute;
   object-fit: cover;
   width: 100%;
@@ -32,6 +33,7 @@
 }
 .gallery__slide_active {
   opacity: 1;
+  display: block;
 }
 
 .gallery__image {
@@ -50,12 +52,10 @@
   bottom: 60px;
 }
 
-.gallery__controls-wrapper {
+.gallery__controls {
   position: absolute;
-  display: flex;
-  width: 100%;
   bottom: 162px;
-  height: 40px;
+  display: flex;
   row-gap: 14px;
 }
 
@@ -66,7 +66,6 @@
   background-repeat: no-repeat;
   width: 40px;
   height: 40px;
-  z-index: 10;
 }
 
 .gallery__control-prev {
@@ -89,7 +88,7 @@
   }
   .gallery__tittle {
     top: 80px;
-    left: 50px;
+
     font-size: 20px;
     line-height: 27px;
   }
@@ -97,13 +96,12 @@
     width: 377px;
     font-size: 25px;
     line-height: 34px;
-    left: 50px;
     bottom: 80px;
   }
-  .gallery__controls-wrapper {
+
+  .gallery__controls {
+    gap: 35px;
     bottom: 155px;
-    left: 34px;
-    row-gap: 34px;
   }
 }
 @media (max-width: 767px) {
@@ -112,7 +110,6 @@
   }
   .gallery__tittle {
     top: 60px;
-    left: 12px;
     font-size: 14px;
     line-height: 19px;
   }
@@ -120,12 +117,13 @@
     width: 287px;
     font-size: 19px;
     line-height: 26px;
-    left: 13px;
     bottom: 60px;
   }
-  .gallery__controls-wrapper {
+
+  .gallery__controls {
     bottom: 191px;
-    left: -3px;
+    right: 13px;
+    width: 100%;
     justify-content: space-between;
   }
   .gallery__control-prev,
