--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,59 +1,97 @@
 .contacts_wrapper {
-  width: 1400px;
+  width: 100%;
   margin: 0 auto;
   position: relative;
 }
-
-.contacts_wrapper:before {
-  content: "";
-  display: block;
-  position: absolute;
-  height: 22px;
-  width: 14px;
-  background-image: url(/resources/phone-icon.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50%;
-  left: 125px;
-  top: 152px;
-}
-
-h5 {
-  font-size: 18px;
-  line-height: 25px;
+h2 {
   color: #121212;
   letter-spacing: -0.03em;
-  padding-top: 187px;
-  padding-left: 124px;
-  padding-bottom: 32px;
+  padding-top: 150px;
 }
-.phone_number {
-  padding-bottom: 28px;
-  padding-left: 124px;
+.contacts__block {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 104px;
+  padding-bottom: 150px;
 }
-.cellphone {
+
+.contacts__phone::before {
+  margin-bottom: 27px;
+  content: "";
+  display: block;
+  height: 22px;
+  width: 14px;
+  background-image: url(../resources/contacts/phone-icon.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.contacts__phone {
   font-size: 60px;
-  line-height: 58px;
+  line-height: 60px;
   letter-spacing: -0.01em;
   color: #121212;
   text-decoration: none;
 }
-
-.e-mail {
-  padding-bottom: 160px;
-  padding-left: 125px;
-  padding-top: 4px;
+.contacts__email::before {
+  margin-bottom: 23px;
+  content: "";
+  display: block;
+  height: 26px;
+  width: 19px;
+  background-image: url(../resources/contacts/telegram-icon.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.contacts__email {
+  font-size: 60px;
+  line-height: 60px;
+  letter-spacing: -0.01em;
 }
 
-.mail {
-  font-size: 60px;
-  line-height: 58px;
-  letter-spacing: -0.03em;
+.contacts__link {
   color: #121212;
-  opacity: 50%;
   text-decoration: none;
 }
-
-.mail:hover {
-  border-bottom: 2px solid #121212;
+.contacts__link:hover {
+  border-bottom: 2px solid rgba(0, 0, 0, 0.5);
+  opacity: 0.5;
 }
+
+@media (max-width: 1199px) {
+  h2 {
+    padding-top: 120px;
+  }
+  .contacts__block {
+    gap: 114px;
+    padding-bottom: 120px;
+  }
+  .contacts__phone {
+    font-size: 45px;
+  }
+  .contacts__email {
+    font-size: 45px;
+  }
+}
+@media (max-width: 767px) {
+  h2 {
+    padding-top: 80px;
+  }
+  .contacts__block {
+    flex-direction: column;
+    gap: 58px;
+    padding-bottom: 80px;
+  }
+  .contacts__phone {
+    font-size: 35px;
+    line-height: 46px;
+  }
+  .contacts__email {
+    font-size: 35px;
+    line-height: 46px;
+  }
+}
+
