--- a/styles/services.css
+++ b/styles/services.css
@@ -79,7 +79,7 @@
     line-height: 27px;
     padding: 7px 26px;
   }
-  .service_btn {
+  .js_btn {
     height: 100px;
     margin-bottom: 120px;
   }
@@ -106,7 +106,7 @@
     margin-top: 23px;
     margin-left: 24px;
   }
-  .service_btn {
+  .js_btn {
     height: 100px;
     font-size: 22px;
     line-height: 30px;
