--- a/styles/services.css
+++ b/styles/services.css
@@ -49,7 +49,7 @@
   padding: 7px 21px;
 }
 
-.js_btn {
+.js-btn {
   font-family: inherit;
   height: 153px;
   width: 100%;
@@ -79,7 +79,7 @@
     line-height: 27px;
     padding: 7px 26px;
   }
-  .js_btn {
+  .js-btn {
     height: 100px;
     margin-bottom: 120px;
   }
@@ -106,7 +106,7 @@
     margin-top: 23px;
     margin-left: 24px;
   }
-  .js_btn {
+  .js-btn {
     height: 100px;
     font-size: 22px;
     line-height: 30px;
